--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<h1>Gemeinschaftsausgaben</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Gemeinschaftsausgaben</h1>
 <h2>Ziffern</h2>
-<p>MichNr 928 (30Pf)</p>
+<a href="Mn928.html">MichNr 928 (30Pf)</a>
+    
+</body>
+</html>
+
+
+
+ 
