--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Gemeinschaftsausgaben</h1>
-<h2>Ziffern</h2>
+    <h2>1946</h2>
+<h3>Ziffern 911-937</h3>
+<a href="Mn926.html">MichNr 926 (25Pf blau)</a><br>
 <a href="Mn927.html">MichNr 927 (25Pf gelb)</a><br>
 <a href="Mn928.html">MichNr 928 (30Pf)</a>
     
